lldpd: Autospec creation for update from version 1.0.17 to version 1.0.18
Andreas Hofmann (1):
      client/conf-power: Add support for 803.2bt parameters.

Arjun (1):
      [Fuzzing] oss-fuzz cifuzz (#587)

Arjun Singh (3):
      [Fuzzing] updates for oss-fuzz Ideal integration
      [bug] fix 5193822305648640 and 4673544697806848
      [oss-fuzz] Issue 62435

Georg Sauthoff (2):
      client: translate dot into the short hostname
      build: improve const correctness and prototype declarations

Vincent Bernat (37):
      redhat: do not ship .la file in -devel package
      osx: don't use plist_options
      osx: update homebrew recipe
      daemon: do not start if fuzzing build mode is enabled
      docs: add a NEWS entry about memory leak
      build: reformat action for fuzzing
      build: rename fuzzing workflow
      client: do not expose update command when unprivileged
      github: add GitHub sponsorship
      build: try to fix CI on MacOS
      build: try another way to workaround problem with brew
      build: fix alignment in configure.ac
      lldpcli: fix capitalization
      daemon/protocols: fix some 802.3bt stuff
      daemon/lldp: remove support for 802.3bt
      lib: bump API/ABI
      tests/integration: also remove 802.3bt test
      build: update nixpkgs
      daemon/lldp: restore read support for 802.3BT
      lib/lldpctl: fix style
      daemon/lldp: fix warning message about out of order TLVs
      daemon/lldpd: fix capitalization in help output
      build: remove coverity
      client: fix style
      build: ensure we use -Werror on Linux builds
      build: use QEMU for testing FreeBSD/OpenBSD
      build: keep using xhyve for OpenBSD
      build: update BSD versions, add NetBSD
      build: update automake for OpenBSD
      daemon/lldpd: do not set interface description continuously
      daemon/priv: no need to define IFALIASZ
      compat: add compat.h header to get forward declarations
      daemon/netlink: use a different socket for

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+lldpd (1.0.18)
+ * Changes (breaking):
+   + Remove support for building 802.3bt TLVs (broken).
+ * Fix:
+   + Fix memory leaks in EDP/FDP decoding when receiving some TLVs twice.
+   + Do not set interface description continuously.
+   + Use a different Netlink socket for changes and queries.
+
 lldpd (1.0.17)
  * Fix:
    + Read overflow when parsing CDP addresses. Thanks to Matteo Memelli.
